--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
 	<p>Listed in order of precedence</p>
 	<ul>
 		<li> Fully customizable model parameters
+		<li> Initially host this page on <a
+			href="https://pl-mich.github.io/SOCR-teachable-machine/">GitHub Pages</a>
 		<li> TensorBoard visualization
 		<li> Multiple inputs
 		<li> Convert string labels into numbers
